# fast-tmp

./: .dockerignore  .env  .env_example  .gitignore  .rancher-pipeline.yml  .rancher_env  Dockerfile  Makefile  README.md  conftest.py  detail.md  docker-compose.yml  jenkinsfile  log.md  package-lock.json  pyproject.toml  requirements.txt  t.js  t.py  tasks.md  test.py  学习.md
.github/workflows/: blank.yml
cache/: __init__.py  cache.py
cli/: __init__.py
example/: __init__.py  config.py  db.py  errors.py  exceptions.py  factory.py  main.py  models.py  schema.py  schemas.py  serializers.py  settings.py
example/apps/: __init__.py
example/apps/admin/: __init__.py
example/apps/api/: __init__.py  errors.py  exceptions.py  views.py
example/apps/app1/: __init__.py  app.py  serializer.py  views.py
example/apps/docs/: __init__.py
example/enums/: __init__.py
fast_tmp/: __init__.py  amis_app.py  amis_router.py  choices.py  common.py  depends.py  exception_handler.py  factory.py  models.py  redis.py  responses.py  schemas.py  settings.py  templates_app.py  u_d.py
fast_tmp/amis/: func.py  util2.py  util3.py  utils.py
fast_tmp/amis/schema/: abstract_schema.py  actions.py  amis_json.py  amislist.py  app.py  buttons.py  crud.py  enums.py  form.py  frame.py  nav.py  page.py  t.py  widgets.py
fast_tmp/api/: __init__.py  admin.py  auth.py  auth2.py  menu.py  site.py
fast_tmp/conf/: __init__.py  global_settings.py
fast_tmp/config/: __init__.py  settings.py
fast_tmp/contrib/: __init__.py  action.py
fast_tmp/contrib/admin_model/: __init__.py
fast_tmp/core/: __init__.py  admin.py  amis_app.py  amis_router.py  choices.py  filter.py  mixins.py  page.py  router.py
fast_tmp/jinja_extension/: tags.py
fast_tmp/models/: __init__.py  enums.py
fast_tmp/schema/: __init__.py  openapi.py  response.py
fast_tmp/static/: cxd-ie11.css  cxd.css  dark-ie11.css  dark.css  fetcher_x.js  index.html  sdk-ie11.css  sdk.js
fast_tmp/templates/admin/: base.html  crud.html  index.html  t.html
fast_tmp/utils/: base_enums.py  filter.py  model.py  openapi.py  password.py  token.py  urls.py
pip_outline/: aerich-0.4.2-py3-none-any.whl  aiofiles-0.5.0-py3-none-any.whl  aiomysql-0.0.21-py3-none-any.whl  aiosqlite-0.16.0-py3-none-any.whl  bandit-1.7.0-py3-none-any.whl  coverage-5.3-cp38-cp38-win_amd64.whl  execnet-1.7.1-py2.py3-none-any.whl  fastapi-0.62.0-py3-none-any.whl  graphene-2.1.8-py2.py3-none-any.whl  hiredis-1.1.0-cp38-cp38-win_amd64.whl  orjson-3.4.6-cp38-none-win_amd64.whl  pytest_asyncio-0.14.0-py3-none-any.whl  pytest_cov-2.10.1-py2.py3-none-any.whl  pytest_xdist-2.2.0-py3-none-any.whl  tortoise_orm-0.16.18-py3-none-any.whl  typed_ast-1.4.1-cp38-cp38-win_amd64.whl  ujson-3.2.0-cp38-cp38-win_amd64.whl  uvicorn-0.11.8-py3-none-any.whl  watchgod-0.6-py35.py36.py37-none-any.whl
tests/: models.py  t2.py  t3.py  test_all.py  test_arq.py  test_auth_model.py  test_cache.py  test_fastapi.py  test_many_2_many.py  test_metaclass.py  test_pyn.py  test_sqlalchemy.py  test_union.py  testpyandatic.py
utils/: encrypt.py
(+9 files in other folders)
