[tool.poetry]
name = "fast-tmp"
version = "0.1.0"
description = "为fastapi项目开发做准备"
authors = ["chise <chise123@live.com>"]
license = "GPL"
packages = [
    { include = "fast_tmp" }
]
include = ["LICENSE", "README.md"]


[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
fastapi = "^0.61.2"
tortoise-orm = "^0.16.18"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true

#启动脚本

[tool.poetry.scripts]
fast-tmp = "fast_tmp.cli:main"
