[tool.poetry]
name = "fast-tmp"
version = "0.1.0"
description = "为fastapi项目开发做准备"
authors = ["chise <chise123@live.com>"]
license = "Apache-2.0"
repository = "https://github.com/Chise1/fast-tmp"
packages = [
    { include = "fast_tmp" }
]
include = ["LICENSE", "README.md"]


[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
fastapi = "^0.63.0"
watchgod = "^0.6"
typer = "^0.3.2"
uvicorn = "^0.13.3"
redis = "^3.5.3"
python-multipart = "^0.0.5"
sentry-sdk = "^0.19.5"
python-jose = "^3.2.0"
passlib = "^1.7.4"
aiofiles = "^0.6.0"
jinja2 = "^2.11.2"
rearq = "^0.1.4"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dbdrivers = ["aioredis"]
sentry = ["sentry-sdk"]

[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true

#启动脚本

[tool.poetry.scripts]
fast-tmp = "fast_tmp.cli:main"
